shaping of all pages

--- a/QuiSommesNous.html
+++ b/QuiSommesNous.html
@@ -5,25 +5,28 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title></title>
+  <title>Le Projet</title>
 </head>
 
 <body>
-  <div class="front">
+  <div class="">
     <nav class="navbar">
       <a href="index.html">Paris-Kigali</a>
-      <a href="#qui-sommes-nous">Qui sommes nous</a>
       <a href="rwanda.html">Rwanda</a>
       <a href="Gaspard.html">Gaspard.. Mon histoire</a>
       <a href="QuiSommesNous.html">Le Projet</a>
-      <a href="#Pourquoi-le-rwanda">Pourquoi le Rwanda</a>
       <a href="Contact.html">Contactez Nous!</a>
     </nav>
+
   </div>
 
-
-  <h2>Paris-Kigali Cercle Franco-Rwandais</h2>
-
+<div class="header-QSN">
+  <h2 class="titre-QSN">Paris-Kigali</h2>
+  <img class="image-QSN" src="photo/LOGO CERCLE PARIS KIGALI-1-01.jpg" alt="logo-cercle">
+  <h2 class="titre-QSN"> Cercle Franco-Rwandais</h2>
+</div>
+  
+<div class="main-QSN">
   <p>
     Un accompagnement innovant dans la réalisation de vos projets. Nous mettons
     nos compétences au service de vos projets grâce à la richesse et à lʼintelligence collective de nos collaborateurs, de nos partenaires. Nos valeurs-clés sont d’accompagner les projets au démarrage, grâce à nos expériences, nos réseaux
@@ -97,6 +100,7 @@
     Le Cercle est reflété par un réseau riche et divers de collaborateurs, de partenaires, de porteurs de projets existants et anciens, la notoriété des projets portés, le succès des projets, la satisfaction des personnes accompagnées, le
     nombre dʼanciens porteurs de projets qui deviennent nos collaborateurs pour mettre leurs compétences, expériences, au service des nouveaux porteurs de projets, le niveau d’engagement des partenaires.
   </p>
+</div>
 
 </body>
 
