--- a/rwanda.html
+++ b/rwanda.html
@@ -12,9 +12,8 @@
   <div class="front-rwanda">
     <nav class="navbar">
       <a href="index.html">Paris-Kigali</a>
-      <a href="#qui-sommes-nous">Qui sommes nous</a>
       <a href="rwanda.html">Rwanda</a>
-      <a href="#Pourquoi-le-rwanda">Pourquoi le Rwanda</a>
+      <a href="Gaspard.html">Gaspard.. Mon histoire</a>
       <a href="Contact.html">Contactez Nous!</a>
     </nav>
 
