--- a/Gaspard.html
+++ b/Gaspard.html
@@ -9,24 +9,24 @@
 </head>
 
 <body>
-  <div class="front-Gaspard">
+  <div class="">
     <nav class="navbar">
       <a href="index.html">Paris-Kigali</a>
-      <a href="#qui-sommes-nous">Qui sommes nous</a>
       <a href="rwanda.html">Rwanda</a>
       <a href="Gaspard.html">Gaspard.. Mon histoire</a>
       <a href="QuiSommesNous.html">Le Projet</a>
-      <a href="#Pourquoi-le-rwanda">Pourquoi le Rwanda</a>
       <a href="Contact.html">Contactez Nous!</a>
     </nav>
   </div>
 
-  <h3>Fondateur du Cercle</h3>
-  <h2>Gaspard Jassef</h2>
+  <div class="header-QSN">
+  <h3 class="titre-QSN">Fondateur du Cercle</h3>
+  <h2 class="titre-QSN">Gaspard Jassef</h2>
+  </div>
 
-  <img src="photo/Phot Gaspard .jpg" alt="photo gaspard jassef">
-
-
+  <div class="main-gaspard">
+  <div>
+  <img class="image-gaspard" src="photo/Phot Gaspard .jpg" alt="photo gaspard jassef">
   <p>
     Le parcours de Gaspard est pour le moins, atypique. Survivant d’un génocide qui a fait plus d’un million de morts en trois mois, il arrive en France à six ans. Après avoir sauté deux classes sur la demande de son école, il connaît l’échec
     scolaire. Il étudie en classe prépa Hypokhâgne, khâgne, part à l’étranger à « the University of Southampton » (Royaume-Uni), il obtient son diplome à la Sorbonne. Gaspard, cadet de quatre enfants avant le génocide, naît dans le sud du
@@ -34,6 +34,7 @@
     lequel sont enterrés son petit frère, sa petite sœur et sa mère. En 1994, il survit seul en forêt durant plusieurs mois. Atteint de malnutrition sévère, il rencontre Dominique, infirmière chez MSF (médecins sans frontières) qui décide
     ensuite de l’adopter.
   </p>
+</div>
 
 
 
@@ -58,6 +59,7 @@
     Franco-Rwandais qui contribue au renforcement de l’amitié Franco-Rwandaise. Pour Gaspard, l’Europe c’est la France, l’Afrique c’est le Rwanda, l’Europe à besoin de l’Afrique, l’Afrique à besoin de l’Europe, il fait partie de cette génération
     qui se concentre uniquement sur l’avenir de ses deux pays, de ses deux continents.
   </p>
+</div>
 
 </body>
 
