--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
   <title>Contact</title>
 </head>
 
-<body>
+<body class="body-contact">
   <div class="front-contact">
     <nav class="navbar">
       <a href="index.html">Paris-Kigali</a>
@@ -33,7 +33,7 @@
       </div>
 
       <div class="email">
-        <label for="">Votre email</label>
+        <label for style="margin-right: 26px;" >Votre email</label>
         <input type="text" name="yourEmail" value="">
       </div>
 
